--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "prisma generate && next dev",
-    "build": "prisma generate && prisma db push && next build",
+    "dev": "prisma generate --schema=src/app/prisma/schema.prisma && next dev",
+    "build": "prisma generate --schema=src/app/prisma/schema.prisma && prisma db push && next build",
     "start": "next start",
     "lint": "next lint"
   },
