--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "prisma generate --schema=src/app/prisma/schema.prisma && next dev",
-    "build": "prisma generate --schema=src/app/prisma/schema.prisma && prisma db push && next build",
+    "dev": "prisma generate && next dev",
+    "build": "prisma generate && prisma db push && next build",
     "start": "next start",
     "lint": "next lint"
+  },
+  "prisma": {
+    "schema": "src/app/prisma/schema.prisma"
   },
   "dependencies": {
     "@prisma/client": "^5.4.2",
