--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   },
   "dependencies": {
     "@prisma/client": "^5.4.2",
+    "@reduxjs/toolkit": "^1.9.7",
     "bcrypt": "^5.1.1",
     "next": "13.5.5",
     "next-auth": "^4.23.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
