--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^5.4.2",
     "@reduxjs/toolkit": "^1.9.7",
+    "@vercel/speed-insights": "^1.0.1",
     "bcrypt": "^5.1.1",
     "next": "13.5.5",
     "next-auth": "^4.23.2",
